Fixed bug that would appear on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 html {
   scroll-behavior: smooth;
 }
@@ -12,11 +13,9 @@ body {
   background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   max-width: 100vw;
-  
   color: white !important;
-
 }
 @keyframes fadeInUp {
   0% {
@@ -27,20 +26,19 @@ body {
     opacity: 0.5;
     transform: translate3d(0, 50%, 0);
   }
-100% {
+  100% {
     opacity: 1;
     transform: translate3d(0, 0, 0);
   }
 }
-
-section.section {
-  padding: 0;
+nav, section.section {
+  padding: 0 10vw;
   animation: fadeInUp 0.5s ease-in;
 }
 canvas {
   z-index: -1;
   position: absolute;
-  overflow:hidden;
+  overflow: hidden;
 }
 h1 {
   font-size: 45px;
@@ -60,4 +58,3 @@ h5 {
 h6 {
   font-size: 16px;
 }
-
